--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0"?>
-<package>
+<?xml-model
+   href="http://download.ros.org/schema/package_format3.xsd"
+   schematypens="http://www.w3.org/2001/XMLSchema"?>
+
+<package format="3">
+
   <name>o80_example</name>
   <version>1.0.0</version>
   <description>Example of o80 wrapping</description>
   <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
   <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
-  <license>TODO</license>
-  <buildtool_depend>catkin</buildtool_depend>
+  <license>BSD 3-Clause</license>
+  
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>o80</build_depend>
-  <run_depend>o80</run_depend>
+  <depend>o80</depend>
+
+  <test_depend>ament_cmake_gtest</test_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
   </export>
+
 </package>
