--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <depend>Boost</depend>
   
   <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_cmake_nose</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
