added python native package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,15 +51,23 @@ target_link_libraries(${PROJECT_NAME}_py PRIVATE pybind11::module)
 target_link_libraries(${PROJECT_NAME}_py PRIVATE ${PYTHON_LIBRARIES})
 target_link_libraries(${PROJECT_NAME}_py PRIVATE ${PROJECT_NAME})
 set_target_properties(${PROJECT_NAME}_py
-  PROPERTIES PREFIX "" SUFFIX "${PYTHON_MODULE_EXTENSION}"
-  OUTPUT_NAME ${PROJECT_NAME})
+  PROPERTIES PREFIX "" SUFFIX "${PYTHON_MODULE_EXTENSION}")
+set_target_properties(${PROJECT_NAME}_py PROPERTIES
+  OUTPUT_NAME ${PROJECT_NAME}_wrp)
 target_include_directories(
   ${PROJECT_NAME}_py
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
          $<INSTALL_INTERFACE:include> SYSTEM
-  PUBLIC ${PYTHON_INCLUDE_DIRS})
+	 PUBLIC ${PYTHON_INCLUDE_DIRS})
 _ament_cmake_python_get_python_install_dir()
 install(TARGETS ${PROJECT_NAME}_py DESTINATION ${PYTHON_INSTALL_DIR})
+
+
+######################
+# Python Native code #
+######################
+
+ament_python_install_package(${PROJECT_NAME} PACKAGE_DIR python/${PROJECT_NAME})
 
 
 #################
@@ -83,13 +91,6 @@ install(
   INCLUDES
   DESTINATION include)
 ament_package()
-
-
-#######################
-# Debian control file #
-#######################
-
-install(FILES debian/control DESTINATION debian)
 
 
 ##############
