compiling without colcon/ament, after installation of o80 from source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10.2)
 
-project(o80_example)
+project(o80_example VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
@@ -9,18 +9,44 @@ set(CMAKE_CXX_STANDARD_REQUIRED on)
 # Dependencies #
 ################
 
-find_package(ament_cmake REQUIRED)
-find_package(ament_cmake_python REQUIRED)
-find_package(ament_cmake_nose REQUIRED)
-find_package(o80 REQUIRED)
-find_package(signal_handler REQUIRED)
-find_package(pybind11 REQUIRED)
 find_package(Boost REQUIRED COMPONENTS filesystem system thread)
-ament_export_dependencies(Boost o80 signal_handler pybind11)
 
-# prepare to export all needed targets
-set(all_targets)
-set(all_target_exports)
+
+#o80
+if ((DEFINED o80_DIR) AND (EXISTS ${o80_DIR}/include/o80) AND (EXISTS ${o80_DIR}/lib))
+	set(o80 ${o80_DIR})
+else()
+	find_path(o80 PATHS ${o80_DIR} NAMES include/o80 lib/libo80.so)
+endif()
+if (NOT "${o80}" MATCHES "o80-NOTFOUND")
+	message("-- o80 FOUND. o80 at ${o80}/lib/libo80.so")
+	set(o80_INCLUDE_DIRS ${o80}/include)
+	set(o80_LIBRARY_DIRS ${o80}/lib)
+	set(o80_LIBRARIES real_time_tools shared_memory signal_handler synchronizer time_series o80)
+else()
+	message(FATAL_ERROR
+	"  Could not find an C++ include file \"include/o80/front_end.hpp\"\n"
+	"  Make sure \"o80\" is installed or set \"o80_DIR\" to a directory\n"
+	"  containing \"include\" and \"lib\" subdirectories of \"o80\" project.")
+endif()
+
+#pybind11
+
+find_package(Python COMPONENTS Interpreter Development REQUIRED)
+
+find_package(pybind11 CONFIG REQUIRED)
+if(pybind11_FOUND)
+	exec_program(python3 ARGS -m pybind11 --includes | cut -d ' ' -f1 | sed 's+-I/+/+g' OUTPUT_VARIABLE pybind11_INCLUDE_DIR1)
+	exec_program(python3 ARGS -m pybind11 --includes | cut -d ' ' -f2 | sed 's+-I/+/+g' OUTPUT_VARIABLE pybind11_INCLUDE_DIR2)
+	exec_program(python3 ARGS --version | cut -d ' ' -f2 | cut -d '.' -f1 OUTPUT_VARIABLE python_VERSION_MAJOR)
+	exec_program(python3 ARGS --version | cut -d ' ' -f2 | cut -d '.' -f2 OUTPUT_VARIABLE python_VERSION_MINOR)
+	set(pybind11_INCLUDE_DIRS ${pybind11_INCLUDE_DIR1} ${pybind11_INCLUDE_DIR2})
+	unset(pybind11_INCLUDE_DIR1)
+	unset(pybind11_INCLUDE_DIR2)
+endif()
+
+# eigen
+find_package(Eigen3 REQUIRED)
 
 
 ###########
@@ -32,76 +58,42 @@ add_library( ${PROJECT_NAME} SHARED
   src/driver_out.cpp
   src/standalone.cpp
   src/driver.cpp )
-target_include_directories(
-  ${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-ament_target_dependencies(${PROJECT_NAME} o80)
-target_link_libraries(${PROJECT_NAME} o80::o80)
-ament_export_interfaces(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
-list(APPEND all_targets ${PROJECT_NAME})
-list(APPEND all_target_exports export_${PROJECT_NAME})
+
+target_include_directories(o80_example PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
+target_include_directories(o80_example PUBLIC ${o80_INCLUDE_DIRS})
+target_include_directories(o80_example PUBLIC ${EIGEN3_INCLUDE_DIRS})
+target_include_directories(o80_example PUBLIC ${Python_INCLUDE_DIRS})
+target_link_directories(o80_example PUBLIC $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}> $<INSTALL_INTERFACE:lib>)
+target_link_directories(o80_example PUBLIC ${o80_LIBRARY_DIRS})
+target_link_libraries(o80_example PUBLIC ${o80_LIBRARIES})
+target_link_libraries(o80_example PUBLIC boost_system boost_thread rt pthread)
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file("${PROJECT_SOURCE_DIR}/o80_example-config-version.cmake" VERSION ${PROJECT_VERSION} COMPATIBILITY AnyNewerVersion)
+export(TARGETS o80_example FILE "${PROJECT_SOURCE_DIR}/o80_example-config.cmake")
+install(DIRECTORY include/o80_example TYPE INCLUDE)
+install(TARGETS o80_example EXPORT o80_example-config)
+install(EXPORT o80_example-config DESTINATION lib/cmake/o80_example)
+install(FILES "${PROJECT_SOURCE_DIR}/o80_example-config-version.cmake" DESTINATION lib/cmake/o80_example)
+
+
 
 
 ###################
 # Python wrappers #
 ###################
 
-add_library(${PROJECT_NAME}_py MODULE srcpy/wrappers.cpp)
-target_link_libraries(${PROJECT_NAME}_py PRIVATE pybind11::module)
-target_link_libraries(${PROJECT_NAME}_py PRIVATE ${PYTHON_LIBRARIES})
-target_link_libraries(${PROJECT_NAME}_py PRIVATE ${PROJECT_NAME})
-set_target_properties(${PROJECT_NAME}_py
-  PROPERTIES PREFIX "" SUFFIX "${PYTHON_MODULE_EXTENSION}"
-  OUTPUT_NAME ${PROJECT_NAME})
-target_include_directories(
-  ${PROJECT_NAME}_py
-  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-         $<INSTALL_INTERFACE:include> SYSTEM
-  PUBLIC ${PYTHON_INCLUDE_DIRS})
-_ament_cmake_python_get_python_install_dir()
-install(TARGETS ${PROJECT_NAME}_py DESTINATION ${PYTHON_INSTALL_DIR})
 
-
-#################
-# documentation #
-#################
-
-add_documentation()
-
-
-######################
-# Install and export #
-######################
-
-install(DIRECTORY include/ DESTINATION include)
-install(
-  TARGETS ${all_targets}
-  EXPORT ${all_target_exports}
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION bin
-  INCLUDES
-  DESTINATION include)
-ament_package()
-
-
-#######################
-# Debian control file #
-#######################
-
-install(FILES debian/control DESTINATION debian)
-
-
-##############
-# Unit tests #
-##############
-
-if(BUILD_TESTING)
-  find_package(ament_cmake_gtest REQUIRED)
-  ament_add_gtest(test_${PROJECT_NAME}_cpp tests/main.cpp tests/unit_tests.cpp)
-  target_link_libraries(test_${PROJECT_NAME}_cpp ${PROJECT_NAME})
+# o80_example_python
+if (pybind11_FOUND)
+  add_library(o80_example_python SHARED srcpy/wrappers.cpp)
+  if (o80_example_omit_include_directories MATCHES yes)
+    target_compile_definitions(o80_example_python PRIVATE O80_EXAMPLE_WRAPPERS_INSTALLED)
+  endif()
+  target_include_directories(o80_example_python PRIVATE ${pybind11_INCLUDE_DIRS})
+  target_link_libraries(o80_example_python PRIVATE o80_example)
+  set_target_properties(o80_example_python PROPERTIES PREFIX "")
+  set_target_properties(o80_example_python PROPERTIES OUTPUT_NAME "o80_example.cpython-${python_VERSION_MAJOR}${python_VERSION_MINOR}-${CMAKE_LIBRARY_ARCHITECTURE}")
+  install(TARGETS o80_example_python DESTINATION "lib/python${python_VERSION_MAJOR}.${python_VERSION_MINOR}/dist-packages")
 endif()
-
-
 
 
