--- a/package.xml
+++ b/package.xml
@@ -16,7 +16,7 @@
 
   <depend>o80</depend>
   <depend>signal_handler</depend>
-  <depend>pybind11_vendor</depend>
+  <depend>pybind11</depend>
   <depend>Boost</depend>
   
   <test_depend>ament_cmake_gtest</test_depend>
